--- a/TESTING/testing.scss
+++ b/TESTING/testing.scss
@@ -1,49 +1,30 @@
-/* v--v--v--v--v--v--v--v--DO NOT MODIFY--v--v--v--v--v--v--v--v--v--v */
-.wrapper {
-	display: flex;
-	width: 100%;
-	white-space: normal;
-}
-.blocker {
-	height: 300px;
-	width: 48px;
-	background-color: white;
-	z-index: 10;
+html {
+	overflow-x: hidden;
 }
 
-.cars_Minivans-container-outer {
+/* v--v--v--v--v--v--v--v--DO NOT MODIFY--v--v--v--v--v--v--v--v--v--v */
+$padding-value: 20px;
+.stationary-wrapper {
+	outline: 1px solid blue;
+}
+
+.vehicle-container-outer {
+	display: inline-flex;
+	width: fit-content;
+	margin: 0;
+	// transform: translateX(calc(0 * (-1200px + (-#{$padding-value}) * 2)));
+	outline: 1px solid green;
+}
+
+.vehicle-carousel-item-container {
 	display: flex;
-	position: relative; /* Use relative positioning */
 	transition: transform 1s ease;
 	width: 600px;
-	margin: 0;
-	/* margin-left: 60px; */
-	/* margin-right: 60px; */
-	padding-left: 26px;
-}
-
-.cars_Minivans-carousel-item-container {
-	display: flex;
-	width: 600px;
-	margin-right: 26px;
+	// margin-right: 30px;
 	padding: 0;
+	padding-left: #{$padding-value};
 	border-radius: 10% 0 0 10%;
 }
-
-.container {
-	display: flex;
-	position: relative; /* Use relative positioning */
-	width: 600px;
-	margin: 0;
-	padding: 0;
-}
-
-/* added */
-.carousel-item-container.last-slide {
-	justify-content: flex-end; /* Align the last slide to the right */
-	border-radius: 0 10% 10% 0; /* Adjust border-radius for the right side */
-}
-/* added */
 
 .left-box-img {
 	min-width: 335px;
@@ -55,11 +36,6 @@
 .box {
 	display: flex;
 	height: 335px; /* Set the height for both divs */
-}
-
-.left-box-img-container {
-	width: 335px; /* Set the width for Div 1 */
-	/* border: 1px solid #ccc; */
 }
 
 .right-box-info-container {
@@ -100,8 +76,7 @@
 	font-weight: 500;
 	text-decoration: none;
 }
-
-#cars_Minivans,
+#cars_Minivans #trucks,
 #SUVs_Crossovers,
 #electric,
 #lil_tikes {
@@ -118,7 +93,7 @@
 	text-align: center;
 }
 
-.btn-type-two {
+.btn-carousel {
 	border-radius: 90px;
 	color: black;
 	outline: 2px solid rgb(221, 225, 228);
@@ -128,12 +103,12 @@
 	background-color: black;
 }
 
-.btn-type-two:hover {
+.btn-carousel:hover {
 	background-color: #58595b;
 	transition: all 0.5s ease-out;
 }
 
-.btn-type-two-img {
+.btn-carousel-img {
 	height: 30px;
 }
 
