--- a/carouselBackup.css
+++ b/carouselBackup.css
@@ -118,3 +118,132 @@
 /* OAFS-4b */
 /* OAFS-5n */
 /* OAFS-5b */
+
+/* backup from test.css */
+/* backup from test.css */
+/* v--v--v--v--v--v--v--v--DO NOT MODIFY--v--v--v--v--v--v--v--v--v--v */
+/* .wrapper {
+	display: flex;
+	width: 100%;
+	outline: 1px solid green;
+}
+
+.vehicle-container-outer {
+	display: flex;
+	transition: transform 1s ease;
+	width: 100%;
+	margin: 0;
+	padding-left: 30px;
+	outline: 1px solid blue;
+}
+
+.vehicle-carousel-item-container {
+	display: flex;
+	transition: transform 1s ease;
+	width: 600px;
+	margin-right: 30px;
+	padding: 0;
+	border-radius: 10% 0 0 10%;
+}
+
+.container {
+	display: flex;
+	position: relative;
+	width: 600px;
+	margin: 0;
+	padding: 0;
+}
+
+.left-box-img {
+	min-width: 335px;
+	border-radius: 10% 0 0 10%;
+	border: 1px solid #ccc;
+	border-right: none;
+}
+
+.box {
+	display: flex;
+	height: 335px;
+}
+
+.left-box-img-container {
+	width: 335px;
+}
+
+.right-box-info-container {
+	width: 265px;
+	display: block;
+	border: 1px solid #ccc;
+	border-left: none;
+	border-radius: 0 30px 6% 0;
+	position: relative;
+}
+
+.last-carousel-item-containe {
+	padding-right: 26px;
+} */
+/* ^--^--^--^--^--^--^--^--DO NOT MODIFY--^--^--^--^--^--^--^--^--^--^ */
+
+/* Carousel Item - Style #1 */
+/* .ci-s1 {
+	font-size: 15px;
+	font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: 500;
+	text-decoration: none;
+} */
+/* Carousel Item - Style #2 */
+/* .ci-s2 {
+	font-size: 25px;
+	font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: 500;
+	text-decoration: none;
+} */
+/* Carousel Item - Style #3 */
+/* .ci-s3 {
+	font-size: 30px;
+	font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: 500;
+	text-decoration: none;
+} */
+/* Carousel Item - Style #4 */
+/* .ci-s4 {
+	font-size: 10px;
+	font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: 500;
+	text-decoration: none;
+} */
+/* #cars_Minivans #trucks,
+#SUVs_Crossovers,
+#electric,
+#lil_tikes {
+	display: none;
+}
+
+.box-inner-container {
+	position: absolute;
+	bottom: 10px;
+}
+
+.carousel-buttons-container {
+	width: 100%;
+	text-align: center;
+}
+
+.btn-type-two {
+	border-radius: 90px;
+	color: black;
+	outline: 2px solid rgb(221, 225, 228);
+	outline-offset: -6px;
+	width: 75px;
+	height: 45px;
+	background-color: black;
+}
+
+.btn-type-two:hover {
+	background-color: #58595b;
+	transition: all 0.5s ease-out;
+}
+
+.btn-type-two-img {
+	height: 30px;
+} */
